# django-celery-admin-ext

./: AUTHORS  ChangeLog  MANIFEST.in  README.md  buildspec.yml  setup.cfg  setup.py
celery_admin/: admin.py
